[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/ui.gd" type="Script" id=1]
[ext_resource path="res://scenes/countdown.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/empty_pickup.png" type="Texture" id=3]
[ext_resource path="res://ui/base_theme.tres" type="Theme" id=4]
[ext_resource path="res://textures/coin_icon.png" type="Texture" id=5]
[ext_resource path="res://textures/audioOn.png" type="Texture" id=6]
[ext_resource path="res://ui/action_button_styleboxflat.tres" type="StyleBox" id=7]
[ext_resource path="res://textures/target.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="ui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="left_botton_wrap" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 575.0

[node name="left_touch_screen_button" type="TouchScreenButton" parent="left_botton_wrap"]
scale = Vector2( 30, 100 )
shape = SubResource( 4 )

[node name="right_botton_wrap" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -612.0

[node name="right_touch_screen_button" type="TouchScreenButton" parent="right_botton_wrap"]
scale = Vector2( 30, 100 )
shape = SubResource( 1 )

[node name="countdown" parent="." instance=ExtResource( 2 )]

[node name="powreup" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -185.0
margin_top = -212.0
margin_right = -29.0
margin_bottom = -54.0

[node name="pickup_sprite" type="Sprite" parent="powreup"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
centered = false

[node name="pickup_count" type="Label" parent="powreup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.1619
margin_top = 68.1079
margin_right = -49.8381
margin_bottom = 37.1079
align = 1
valign = 1

[node name="shoot_touch_screen_button" type="TouchScreenButton" parent="powreup"]
shape = SubResource( 2 )

[node name="powreup_2" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 59.0
margin_top = -69.0
margin_right = 211.0
margin_bottom = 95.0

[node name="pickup_sprite" type="Sprite" parent="powreup_2"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
centered = false

[node name="pickup_count" type="Label" parent="powreup_2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.1619
margin_top = 68.1079
margin_right = -49.8381
margin_bottom = 37.1079
align = 1
valign = 1

[node name="shoot_touch_screen_button" type="TouchScreenButton" parent="powreup_2"]
shape = SubResource( 2 )

[node name="timer" type="Timer" parent="."]

[node name="h_box_container" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 97.0
alignment = 1

[node name="start_button" type="Button" parent="h_box_container"]
margin_left = 555.0
margin_right = 736.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 0 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset_button" type="Button" parent="h_box_container"]
visible = false
margin_left = 309.0
margin_right = 409.0
margin_bottom = 89.0
text = " Reset "

[node name="music_button" type="Button" parent="h_box_container"]
margin_left = 740.0
margin_right = 840.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 0 )
icon = ExtResource( 6 )

[node name="camera_button" type="Button" parent="h_box_container"]
margin_left = 844.0
margin_right = 944.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 0 )
icon = ExtResource( 8 )

[node name="lap_time_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -86.0
margin_right = 150.0
rect_min_size = Vector2( 40, 0 )
text = "0"
align = 1
valign = 1

[node name="back_button" type="Button" parent="."]
margin_right = 265.0
margin_bottom = 119.0
rect_min_size = Vector2( 50, 0 )
text = " < Exit "

[node name="texture_rect" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -119.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = 120.0
texture = ExtResource( 5 )
expand = true

[node name="coins_label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -243.0
margin_top = 24.0
margin_right = -52.0
margin_bottom = 110.0
align = 2
valign = 1

[node name="break_button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -130.0
custom_styles/normal = ExtResource( 7 )
text = "\\\\//"

[node name="break_button_2" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -130.0
margin_right = 250.0
custom_styles/normal = ExtResource( 7 )
text = "\\\\//"

[connection signal="pressed" from="left_botton_wrap/left_touch_screen_button" to="." method="_on_left_touch_screen_button_pressed"]
[connection signal="released" from="left_botton_wrap/left_touch_screen_button" to="." method="_on_left_touch_screen_button_released"]
[connection signal="pressed" from="right_botton_wrap/right_touch_screen_button" to="." method="_on_right_touch_screen_button_pressed"]
[connection signal="released" from="right_botton_wrap/right_touch_screen_button" to="." method="_on_right_touch_screen_button_released"]
[connection signal="pressed" from="powreup/shoot_touch_screen_button" to="." method="_on_shoot_touch_screen_button_pressed"]
[connection signal="pressed" from="powreup_2/shoot_touch_screen_button" to="." method="_on_shoot_touch_screen_button_pressed"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="h_box_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="h_box_container/reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="h_box_container/music_button" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="h_box_container/camera_button" to="." method="_on_camera_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="button_down" from="break_button" to="." method="_on_break_button_button_down"]
[connection signal="button_up" from="break_button" to="." method="_on_break_button_button_up"]
[connection signal="button_down" from="break_button_2" to="." method="_on_break_button_button_down"]
[connection signal="button_up" from="break_button_2" to="." method="_on_break_button_button_up"]
